# nlp-microbatching-classifier

./: Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
app/: classifier.py  config.py  main.py  metrics.py  microbatch.py  models.py  routes.py
grafana/: dashboard.json
loadtest/: load_generator.py
prometheus/: prometheus.yml
